// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should render PacMan correctly 1`] = `
<Progress
  currentSlideIndex={2}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="pacman"
>
  <Container
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-yfonvn-Container ep7e4014"
    >
      <div>
        <Pacman
          position={
            Object {
              "left": "15px",
              "top": "-20px",
            }
          }
        >
          <div
            className="css-1focrfm-Pacman ep7e4010"
          >
            <Pacman
              styles={
                Array [
                  undefined,
                  Object {
                    "animation": "_EMO_animation-wlhlzv_@keyframes animation-wlhlzv{
  0% { transform: rotateZ(0.1deg) }
  100% { transform: rotateZ(-30deg) }
}_EMO_ 0.12s linear 10 alternate both",
                  },
                  null,
                ]
              }
            >
              <div
                className="css-113afcy-Pacman ep7e4011"
              />
            </Pacman>
            <Pacman
              styles={
                Array [
                  undefined,
                  Object {
                    "animation": "_EMO_animation-1am87zz_@keyframes animation-1am87zz{
  0% { transform: rotateZ(0.1deg) }
  100% { transform: rotateZ(30deg) }
}_EMO_ 0.12s linear 10 alternate both",
                  },
                  null,
                ]
              }
            >
              <div
                className="css-1rxihoa-Pacman ep7e4011"
              />
            </Pacman>
          </div>
        </Pacman>
        <Point
          key="presentation-progress-0"
          position={
            Object {
              "left": "-25px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-19l6p3g-Point ep7e4012"
          />
        </Point>
        <Point
          key="presentation-progress-1"
          position={
            Object {
              "left": "-5px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-9jhg9j-Point ep7e4012"
          />
        </Point>
        <Point
          key="presentation-progress-2"
          position={
            Object {
              "left": "15px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-jx6o3o-Point ep7e4012"
          />
        </Point>
      </div>
    </div>
  </Container>
</Progress>
`;

exports[`<Progress /> should render nothing when none is provided. 1`] = `
<Progress
  currentSlideIndex={3}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="none"
/>
`;

exports[`<Progress /> should render the bar style correctly 1`] = `
<Progress
  currentSlideIndex={1}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="bar"
>
  <Container
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-yfonvn-Container ep7e4014"
    >
      <Bar
        styles={
          Array [
            undefined,
            null,
          ]
        }
        width={
          Object {
            "width": "50%",
          }
        }
      >
        <div
          className="css-5m1fwp-Bar ep7e4013"
          width={
            Object {
              "width": "50%",
            }
          }
        />
      </Bar>
    </div>
  </Container>
</Progress>
`;

exports[`<Progress /> should render the number style correctly 1`] = `
<Progress
  currentSlideIndex={1}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="number"
>
  <Container
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-yfonvn-Container ep7e4014"
    >
      <div>
        2
         / 
        3
      </div>
    </div>
  </Container>
</Progress>
`;
